--- a/package.json
+++ b/package.json
@@ -19,7 +19,7 @@
     "@babel/plugin-proposal-optional-chaining": "^7.6.0",
     "@babel/plugin-transform-modules-commonjs": "^7.6.0",
     "@babel/plugin-transform-runtime": "^7.6.0",
-    "@babel/preset-env": "^7.6.0",
+    "@babel/preset-env": "^7.6.3",
     "@babel/preset-flow": "^7.0.0",
     "@babel/register": "^7.6.0",
     "@babel/runtime": "^7.6.0",
@@ -52,7 +52,7 @@
     "gulp-watch": "^5.0.1",
     "husky": "^3.0.0",
     "jest": "^24.9.0",
-    "lerna": "^3.16.0",
+    "lerna": "^3.18.3",
     "lerna-changelog": "^0.5.0",
     "lint-staged": "^9.2.0",
     "lodash": "^4.17.13",
@@ -136,5 +136,9 @@
     "moduleNameMapper": {
       "^@babel/([a-zA-Z0-9_-]+)$": "<rootDir>/packages/babel-$1/"
     }
+  },
+  "dependencies": {
+    "bootstrap": "^4.3.1",
+    "uninstall": "0.0.0"
   }
 }
